force-app/main/default/objects/E_MOC_TA_Checklist_Require__c.object
<CustomObject>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document Require Checklist</fullName>
                </value>
                <value>
                    <fullName>Hazard Screen Checklist</fullName>
                </value>
                <value>
                    <fullName>TA Checklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Sub_Type__c</fullName>
        <label>Notification Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Cooled Exchangers</fullName>
                </value>
                <value>
                    <fullName>Fired Heaters / Fire Boiler</fullName>
                </value>
                <value>
                    <fullName>Tanks</fullName>
                </value>
                <value>
                    <fullName>Drainage system (AOC, COC, etc)  / Bund / Others</fullName>
                </value>
                <value>
                    <fullName>Temporary repair</fullName>
                </value>
                <value>
                    <fullName>Tracing steam/steam trap</fullName>
                </value>
                <value>
                    <fullName>Pipes / Flanges / Valve</fullName>
                </value>
                <value>
                    <fullName>Pressure Vessels</fullName>
                </value>
                <value>
                    <fullName>Relief Systems</fullName>
                </value>
                <value>
                    <fullName>Shell &amp; Tube Heat Exchangers</fullName>
                </value>
                <value>
                    <fullName>SBM / CBM</fullName>
                </value>
                <value>
                    <fullName>Hot tap</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Buidling and Road</fullName>
                </value>
                <value>
                    <fullName>Loading arm (Jetty &amp; Lorry)</fullName>
                </value>
                <value>
                    <fullName>Hydraulic power unit</fullName>
                </value>
                <value>
                    <fullName>Alarm</fullName>
                </value>
                <value>
                    <fullName>QMI</fullName>
                </value>
                <value>
                    <fullName>APC</fullName>
                </value>
                <value>
                    <fullName>SIF</fullName>
                </value>
                <value>
                    <fullName>Base layer control (DCS), PLC, TAS/TAM</fullName>
                </value>
                <value>
                    <fullName>Rotating equipment</fullName>
                </value>
                <value>
                    <fullName>SBM</fullName>
                </value>
                <value>
                    <fullName>Fire &amp; Gas detection system</fullName>
                </value>
                <value>
                    <fullName>Driver/Actuator (process) at Valve (e.g. Motor, MOV)</fullName>
                </value>
                <value>
                    <fullName>Instrumentation equipment</fullName>
                </value>
                <value>
                    <fullName>Control valve</fullName>
                </value>
                <value>
                    <fullName>Electrical equipment/system</fullName>
                </value>
                <value>
                    <fullName>Emergency Backup Systems</fullName>
                </value>
                <value>
                    <fullName>Comunication (e.g. talk-back, CCTV, radio, public announce and telecomunication network)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_No__c</fullName>
        <label>Question No</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stationary Eq &amp; Piping (ENTS)</fullName>
                </value>
                <value>
                    <fullName>Instrument Engineering Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Stationary Equipment and Piping Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Rotating Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Civil and Structure Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Discipline Checklist (Common questions)</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Discipline Checklist ( Electrical equipment/system )</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Discipline Checklist (Emergency Backup Systems (UPS for Fire &amp; Gas and UPS for DCS, Motor of Firewater pump, Emergency Generator, Emergency lighting, remote fire fighting control equipment))</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Discipline Checklist ( Comunication (e.g. talk-back, CCTV, radio, public announce and telecomunication network))</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Discipline Checklist  ( Driver/Actuator (process) at Valve (e.g. Motor, MOV))</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>E-MOC TA Checklist Require</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document__c</columns>
        <columns>Type__c</columns>
        <columns>Notification_Sub_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Question_No__c</columns>
        <columns>Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Stationary Equipment and Piping Discipline Checklist</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ENEM_E_MOC_TA_Checklist_Require</fullName>
        <filterScope>Queue</filterScope>
        <label>ENEM</label>
        <queue>ENEM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TNPA_E_MOC_TA_Checklist_Require</fullName>
        <filterScope>Queue</filterScope>
        <label>TNPA</label>
        <queue>TNPA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TACR-{00000000}</displayFormat>
        <label>E-MOC TA Checklist Require No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>